# Interactive-Publishing

./: .gitignore  404.html  LICENSE  README.md  index.html  interactive_figure.html  interactive_figure_generator.py  interactive_text.html  mkdocs.yml  objects.inv  pyproject.toml  timeline_electromagnetism.html
.github/workflows/: ci.yml  pypi.yaml
TangleKit/: TangleKit.css
docs/: example_gallery.md  examples_gallery.md  ifigures_api.md  index.md
docs/javascripts/TangleKit/: TangleKit.css  sprintf.js
example_gallery/: index.html
ifigures/: LICENSE  __init__.py  amoplots.py  amoplotsnew.py  interact.py  latex2png.py  my_plots.py  style.py  timelines.py  widgets.py
ifigures_api/: index.html
javascripts/: mathjax.js
javascripts/TangleKit/: TangleKit.js  mootools.js
search/: search_index.json
stylesheets/: extra.css
