[tool.poetry]
name = "interactive-publishing"
version = "0.1.0"
description = "Templates and tools for creating interactive figures and interactive text for publishing in EPUB3/HTML5."
authors = ["Nikola Sibalic <nikolasibalic@physics.org>"]
license = "BSD-3-Clause license"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
matplotlib = "^3.6.2"
Pillow = "^9.4.0"
pngquant = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
