[tool.poetry]
name = "interactive-publishing"
version = "0.2.1"
description = "Templates and tools for creating interactive figures and interactive text for publishing in EPUB3/HTML5."
authors = ["Nikola Sibalic <nikolasibalic@physics.org>"]
license = "BSD-3-Clause license"
packages = [{include = "ifigures"}]
readme = "README.md"
homepage = "https://nikolasibalic.github.io/Interactive-Publishing/"
repository = "https://github.com/nikolasibalic/Interactive-Publishing"
documentation = "https://nikolasibalic.github.io/Interactive-Publishing/"
keywords = ["EPUB3", "interactive publishing", "explorable explanation", "quantum state visualisation"]
classifiers = [
    "Intended Audience :: Education",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: BSD License"
] 

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
matplotlib = "^3.6.2"
Pillow = "^9.4.0"
pngquant = "^1.0.7"
mkdocs-material = {extras = ["imaging"], version =">9.4.8"}
lxml = "^4.9.4"
pyvista = "^0.43.1"
appdirs = "^1.4.4"
mkdocs-glightbox = "^0.3.5"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mkdocs-git-committers-plugin-2 = "^2.2.2"
pngquant-cli = "^2.17.0.post5"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
